New names of services variables

--- a/services.ipynb
+++ b/services.ipynb
@@ -416,6 +416,15 @@
     "                                          , 'organizacionpertence' : 'org_pert', 'infraestructuradiscapacidad' : 'serv_disca' , 'servicios' : 'serv_tipo'  })\n",
     "services_carto.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# rename services variables"
+   ]
   }
  ],
  "metadata": {
