--- a/services.ipynb
+++ b/services.ipynb
@@ -423,8 +423,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# rename services variables"
+    "# serv_tipo id the variable to test (separating by pipe symbol and categorized with number)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
