--- a/services.ipynb
+++ b/services.ipynb
@@ -424,20 +424,20 @@
    "outputs": [],
    "source": [
     "# serv_tipo id the variable to test (separating by pipe symbol and categorized with number)\n",
-    "# Asesoría legal : 1\n",
-    "# Alimentación y nutrición : 2\n",
-    "# Salud, primeros auxilios o atención médica: 3\n",
-    "# Agua potable: 4\n",
-    "# Saneamiento: 5\n",
-    "# Higiene: 6\n",
-    "# Educación: 7\n",
-    "# Alojamiento temporal: 8\n",
-    "# Servicios de protección : 9\n",
-    "# Acompañamiento o apoyo psicosocial: 10\n",
-    "# Transporte humanitario: 11\n",
-    "# Restablecimiento de contacto familiar : 12\n",
-    "# Transferencias monetarias: 13\n",
-    "# Otro: 14\n",
+    "# asesorialegal : 1\n",
+    "# alimentacionynutricion : 2\n",
+    "# saludprimerosauxiliosyatencionmedica: 3\n",
+    "# aguapotable: 4\n",
+    "# saneamiento: 5\n",
+    "# higiene: 6\n",
+    "# educacion: 7\n",
+    "# alojamientotemporal: 8\n",
+    "# serviciosdeproteccion : 9\n",
+    "# acompañamientoayudapsicosocial: 10\n",
+    "# transportehumanitario: 11\n",
+    "# restablecimientodecontactofamiliar : 12\n",
+    "# transferencias: 13\n",
+    "# otro: 14\n",
     "#\n"
    ]
   },
