update services names

--- a/services.ipynb
+++ b/services.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -38,44 +38,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "# serv_tipo id the variable to test (separating by pipe symbol and categorized with number)\n",
-    "# Asesoría legal : 1\n",
-    "# Alimentación y nutrición : 2\n",
-    "# Salud, primeros auxilios o atención médica: 3\n",
-    "# Agua potable: 4\n",
-    "# Saneamiento: 5\n",
-    "# Higiene: 6\n",
-    "# Educación: 7\n",
-    "# Alojamiento temporal: 8\n",
-    "# Servicios de protección : 9\n",
-    "# Acompañamiento o apoyo psicosocial: 10\n",
-    "# Transporte humanitario: 11\n",
-    "# Restablecimiento de contacto familiar : 12\n",
-    "# Transferencias monetarias: 13\n",
-    "# Otro: 14\n",
+    "# asesorialegal : 1\n",
+    "# alimentacionynutricion : 2\n",
+    "# saludprimerosauxiliosyatencionmedica: 3\n",
+    "# aguapotable: 4\n",
+    "# saneamiento: 5\n",
+    "# higiene: 6\n",
+    "# educacion: 7\n",
+    "# alojamientotemporal: 8\n",
+    "# serviciosdeproteccion : 9\n",
+    "# acompañamientoayudapsicosocial: 10\n",
+    "# transportehumanitario: 11\n",
+    "# restablecimientodecontactofamiliar : 12\n",
+    "# transferencias: 13\n",
+    "# otro: 14\n",
     "#\n",
     "services_dict = {\n",
-    "  1 :\"Asesoría legal\",\n",
-    "  2 :\"Alimentación y nutrición\",\n",
-    "  3 :\"Salud, primeros auxilios o atención médica\",\n",
-    "  4 :\"Agua potable\",\n",
-    "  5 :\"Saneamiento\",\n",
-    "  6 :\"Higiene\",\n",
-    "  7 :\"Educación\",\n",
-    "  8 :\"Alojamiento temporal\",\n",
-    "  9 :\"Servicios de protección \",\n",
-    "  10 :\"Acompañamiento o apoyo psicosocial\",\n",
-    "  11 :\"Transporte humanitario\",\n",
-    "  12 :\"Restablecimiento de contacto familiar \",\n",
-    "  13:\"Transferencias monetarias\",\n",
+    "  1 :\"asesorialegal\",\n",
+    "  2 :\"alimentacionynutricion\",\n",
+    "  3 :\"saludprimerosauxiliosyatencionmedica\",\n",
+    "  4 :\"aguapotable\",\n",
+    "  5 :\"saneamiento\",\n",
+    "  6 :\"higiene\",\n",
+    "  7 :\"educacion\",\n",
+    "  8 :\"alojamientotemporal\",\n",
+    "  9 :\"serviciosdeproteccion\",\n",
+    "  10 :\"acompañamientoayudapsicosocial\",\n",
+    "  11 :\"transportehumanitario\",\n",
+    "  12 :\"restablecimientodecontactofamiliar\",\n",
+    "  13:\"transferencias\",\n",
     "  14:\"Otro\",\n",
     "}\n",
     "\n",
-    "reversed_services_dict = dict( [( x[1].lower().replace(\" \", \"\").replace(\",\",\"\"),x[0])  for x in services_dict.items()])\n",
+    "reversed_services_dict = dict( [( x[1],x[0])  for x in services_dict.items()])\n",
     "\n",
     "def codifyServices(x: str, services_dict: dict[str, int]):\n",
     "    raw_values = x.split(\" \")\n",
@@ -94,20 +94,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0    14|4|14|14\n",
-       "1         14|14\n",
-       "2         12|14\n",
-       "3       14|8|14\n",
+       "0    10|4|7|14\n",
+       "1        10|14\n",
+       "2         12|3\n",
+       "3      10|8|14\n",
        "Name: serv_tipo, dtype: object"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
