Restructure of multiple choices

--- a/services.ipynb
+++ b/services.ipynb
@@ -2,15 +2,15 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 53,
       "metadata": {},
       "outputs": [
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "c:\\Users\\User\\anaconda3\\lib\\site-packages\\pandas\\util\\_decorators.py:311: ParserWarning: Length of header or names does not match length of data. This leads to a loss of data with index_col=False.\n",
-            "  return func(*args, **kwargs)\n"
+            "C:\\Users\\maola\\AppData\\Local\\Temp\\ipykernel_12792\\246345009.py:4: ParserWarning: Length of header or names does not match length of data. This leads to a loss of data with index_col=False.\n",
+            "  services = pd.read_csv('Aurora_Office_Fase_2_-_all_versions_-_False_-_2023-09-20-21-01-20.csv', sep=';', index_col = False)\n"
           ]
         }
       ],
@@ -32,8 +32,16 @@
         "              'sexo' : 'identifica', \n",
         "              'organizacionpertence' : 'org_pert', \n",
         "              'infraestructuradiscapacidad' : 'serv_disca' , \n",
-        "              'servicios' : 'serv_tipo'}\n",
-        "services_carto = services.rename(columns=newColumns)"
+        "              'servicios' : 'serv_tipo',\n",
+        "              'siserviciosnna' : 'serv_dif_n',\n",
+        "              'serviciosnna' : 'cual_serv1',\n",
+        "              'otroservicionna' : 'otro_cual_',\n",
+        "              'siserviciosmujeres' : 'serv_dif_m',\n",
+        "              'serviciosmujeres' : 'cual_ser_2',\n",
+        "              'otroserviciomujeres' : 'otro_dif_m',\n",
+        "              }\n",
+        "services_carto = services.rename(columns=newColumns)\n",
+        "#services_carto.head()"
       ]
     },
     {
@@ -43,21 +51,7 @@
       "outputs": [],
       "source": [
         "# serv_tipo id the variable to test (separating by pipe symbol and categorized with number)\n",
-        "# asesorialegal : 1\n",
-        "# alimentacionynutricion : 2\n",
-        "# saludprimerosauxiliosyatencionmedica: 3\n",
-        "# aguapotable: 4\n",
-        "# saneamiento: 5\n",
-        "# higiene: 6\n",
-        "# educacion: 7\n",
-        "# alojamientotemporal: 8\n",
-        "# serviciosdeproteccion : 9\n",
-        "# acompañamientoayudapsicosocial: 10\n",
-        "# transportehumanitario: 11\n",
-        "# restablecimientodecontactofamiliar : 12\n",
-        "# transferencias: 13\n",
-        "# otro: 14\n",
-        "#\n",
+        "\n",
         "services_dict = {\n",
         "  1 :\"asesorialegal\",\n",
         "  2 :\"alimentacionynutricion\",\n",
@@ -89,39 +83,211 @@
         "            \n",
         "    return \"|\".join(output)\n",
         "\n",
-        "services_carto[\"serv_tipo\"] = services_carto[\"serv_tipo\"].apply(lambda x: codifyServices(x, reversed_services_dict))"
+        "services_carto[\"serv_tipo1\"] = services_carto[\"serv_tipo\"].apply(lambda x: codifyServices(x, reversed_services_dict))\n",
+        "#services_carto[\"serv_tipo1\"]"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 25,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "0    10|4|7|14\n",
-              "1        10|14\n",
-              "2         12|3\n",
-              "3      10|8|14\n",
-              "Name: serv_tipo, dtype: object"
+              "0    1|3|6\n",
+              "1    1|2|7\n",
+              "2    1|4|7\n",
+              "3      1|2\n",
+              "Name: cuenta_c_1, dtype: object"
             ]
           },
-          "execution_count": 22,
+          "execution_count": 25,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "services_carto[\"serv_tipo\"]"
+        "# re structure variable cuenta_con\n",
+        "cuenta_con_dict = {\n",
+        "  1 :\"accesoaserviciodeinternet\",\n",
+        "  2 :\"accesoaservicioelectrico\",\n",
+        "  3 :\"areadecomedorescocina\",\n",
+        "  4 :\"areaparadisposiciondebasuras\",\n",
+        "  5 :\"areascomunes\",\n",
+        "  6 :\"areasdelavanderia\",\n",
+        "  7 :\"areasderegistrodelapoblacion\",\n",
+        "  8 :\"ningunadelasanteriores\",\n",
+        "}\n",
+        "\n",
+        "reversed_cuentacon_dict = dict( [( x[1],x[0])  for x in cuenta_con_dict.items()])\n",
+        "\n",
+        "def codifyServices(x: str, cuenta_con_dict: dict[str, int]):\n",
+        "    raw_values = x.split(\" \")\n",
+        "    output = []\n",
+        "    for value in raw_values:\n",
+        "        try:      \n",
+        "          codedValue = cuenta_con_dict [value]\n",
+        "          output.append(str(codedValue) )\n",
+        "        except Exception as e:\n",
+        "            output.append(\"8\")\n",
+        "            \n",
+        "    return \"|\".join(output)\n",
+        "\n",
+        "services_carto[\"cuenta_c_1\"] = services_carto[\"cuenta_con\"].apply(lambda x: codifyServices(x, reversed_cuentacon_dict))\n",
+        "#services_carto[\"cuenta_c_1\"]"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 62,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "0      9\n",
+              "1      1\n",
+              "2      8\n",
+              "3    1|6\n",
+              "Name: cual_ser_1, dtype: object"
+            ]
+          },
+          "execution_count": 62,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "# re structure variable children services (cual_serv1)\n",
+        "cual_serv1_dict = {\n",
+        "  1 :\"nnaalimentacionynutricion\",\n",
+        "  2 :\"nnaapoyooayudapsicosocial\",\n",
+        "  3 :\"nnabanosexclusivosnna\",\n",
+        "  4 :\"nnacuidadosalternativos\",\n",
+        "  5 :\"nnaentregadekits\",\n",
+        "  6 :\"espaciosamigables\",\n",
+        "  7 :\"nnagestiondecasos\",\n",
+        "  8 :\"nnaotro\",\n",
+        "  9 : \" \",\n",
+        "}\n",
+        "\n",
+        "reversed_cual_serv1_dict = dict( [( x[1],x[0])  for x in cual_serv1_dict.items()])\n",
+        "\n",
+        "def codifyServices(x: str, cual_serv1_dict: dict[str, int]):\n",
+        "    raw_values = x.split(\" \")\n",
+        "    output = []\n",
+        "    for value in raw_values:\n",
+        "        try:      \n",
+        "          codedValue = cual_serv1_dict [value]\n",
+        "          output.append(str(codedValue) )\n",
+        "        except Exception as e:\n",
+        "            output.append(\"9\")\n",
+        "            \n",
+        "    return \"|\".join(output)\n",
+        "\n",
+        "services_carto[\"cual_ser_1\"] = services_carto[\"cual_serv1\"].astype(str).apply(lambda x: codifyServices(x, reversed_cual_serv1_dict))\n",
+        "services_carto[\"cual_ser_1\"]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 61,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "0    3|6\n",
+              "1      1\n",
+              "2    1|2\n",
+              "3    4|5\n",
+              "Name: cual_ser_3, dtype: object"
+            ]
+          },
+          "execution_count": 61,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "# re structure variable women services (cual_ser_2)\n",
+        "cual_ser_2_dict = {\n",
+        "  1 :\"mujeresapoyonutricionalgestantesylactantes\",\n",
+        "  2 :\"mujerescontrolesprenatales\",\n",
+        "  3 :\"mujeresduchasobanos\",\n",
+        "  4 :\"mujeresespaciosseguros\",\n",
+        "  5 :\"mujeresgestiondecasosdeviolenciasbasadasengenero\",\n",
+        "  6 :\"mujeresproductosdehigienemenstrual\",\n",
+        "  7 :\"mujeresotro\",\n",
+        "  8 : \" \",\n",
+        "}\n",
+        "\n",
+        "reversed_cual_ser_2_dict = dict( [( x[1],x[0])  for x in cual_ser_2_dict.items()])\n",
+        "\n",
+        "def codifyServices(x: str, cual_ser_2_dict: dict[str, int]):\n",
+        "    raw_values = x.split(\" \")\n",
+        "    output = []\n",
+        "    for value in raw_values:\n",
+        "        try:      \n",
+        "          codedValue = cual_ser_2_dict [value]\n",
+        "          output.append(str(codedValue) )\n",
+        "        except Exception as e:\n",
+        "            output.append(\"8\")\n",
+        "            \n",
+        "    return \"|\".join(output)\n",
+        "\n",
+        "services_carto[\"cual_ser_3\"] = services_carto[\"cual_ser_2\"].astype(str).apply(lambda x: codifyServices(x, reversed_cual_ser_2_dict))\n",
+        "services_carto[\"cual_ser_3\"]\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 58,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "0        5\n",
+              "1        2\n",
+              "2    1|2|3\n",
+              "3        2\n",
+              "Name: almacenamientoregistros_, dtype: object"
+            ]
+          },
+          "execution_count": 58,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "# re structure variable data storage (almacenamientoregistros)\n",
+        "registro_dict = {\n",
+        "  1 :\"archivofisico\",\n",
+        "  2 :\"hojacalculo\",\n",
+        "  3 :\"software\",\n",
+        "  4 :\"otroalmacenarregistro\",\n",
+        "  5 : \" \",\n",
+        "}\n",
+        "\n",
+        "reversed_registro_dict  = dict( [( x[1],x[0])  for x in registro_dict.items()])\n",
+        "\n",
+        "def codifyServices(x: str, registro_dict: dict[str, int]):\n",
+        "    raw_values = x.split(\" \")\n",
+        "    output = []\n",
+        "    for value in raw_values:\n",
+        "        try:      \n",
+        "          codedValue = registro_dict [value]\n",
+        "          output.append(str(codedValue) )\n",
+        "        except Exception as e:\n",
+        "            output.append(\"5\")\n",
+        "            \n",
+        "    return \"|\".join(output)\n",
+        "\n",
+        "services_carto[\"almacenamientoregistros_\"] = services_carto[\"almacenamientoregistros\"].astype(str).apply(lambda x: codifyServices(x, reversed_registro_dict))\n",
+        "services_carto[\"almacenamientoregistros_\"]\n"
+      ]
     }
   ],
   "metadata": {
@@ -140,7 +306,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.7"
+      "version": "3.11.4"
     },
     "orig_nbformat": 4
   },
