refactored clean up procedures

--- a/services.ipynb
+++ b/services.ipynb
@@ -2,20 +2,22 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": 34,
       "metadata": {},
       "outputs": [
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\maola\\AppData\\Local\\Temp\\ipykernel_12792\\246345009.py:4: ParserWarning: Length of header or names does not match length of data. This leads to a loss of data with index_col=False.\n",
-            "  services = pd.read_csv('Aurora_Office_Fase_2_-_all_versions_-_False_-_2023-09-20-21-01-20.csv', sep=';', index_col = False)\n"
+            "c:\\Users\\User\\anaconda3\\lib\\site-packages\\pandas\\util\\_decorators.py:311: ParserWarning: Length of header or names does not match length of data. This leads to a loss of data with index_col=False.\n",
+            "  return func(*args, **kwargs)\n"
           ]
         }
       ],
       "source": [
         "import pandas as pd\n",
+        "from pandas import DataFrame\n",
+        "from pandas import Series\n",
         "\n",
         "# Import dataset\n",
         "services = pd.read_csv('Aurora_Office_Fase_2_-_all_versions_-_False_-_2023-09-20-21-01-20.csv', sep=';', index_col = False)\n",
@@ -40,13 +42,73 @@
         "              'serviciosmujeres' : 'cual_ser_2',\n",
         "              'otroserviciomujeres' : 'otro_dif_m',\n",
         "              }\n",
-        "services_carto = services.rename(columns=newColumns)\n",
-        "#services_carto.head()"
+        "services_carto = services.rename(columns=newColumns)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 61,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def codifyServices(value: str, values_dict: dict[str, int], otherValue:str):\n",
+        "    if(type(value) == float):\n",
+        "        return \"\"\n",
+        "    raw_values = value.split(\" \")\n",
+        "    output = []\n",
+        "    for value in raw_values:\n",
+        "        try:      \n",
+        "            codedValue = values_dict[value]\n",
+        "            output.append(str(codedValue) )\n",
+        "        except Exception as e:\n",
+        "            output.append(otherValue)\n",
+        "            \n",
+        "    return \"|\".join(output)\n",
+        "\n",
+        "def processColumn(dfColumn:Series, values_dict: dict[int, str], other_value: str):\n",
+        "    reversed_values_dict = dict( [( x[1],x[0])  for x in values_dict.items()])\n",
+        "    return dfColumn.apply(lambda x: codifyServices(x, reversed_values_dict, other_value))\n",
+        "\n",
+        "def processMultValueColumns(df: DataFrame, columnObjectsList: list[dict]):\n",
+        "    \"\"\"\n",
+        "    df: DataFrame object\n",
+        "    columnsObjectsList: list of column object\n",
+        "    columnObject: dictionary {\"target_column\": str, \"output_column\": str, values_dict: dict, other_value: str}\n",
+        "\n",
+        "    return DataFrame Object\n",
+        "    \"\"\"\n",
+        "    for columnObject in columnObjectsList:\n",
+        "        try:\n",
+        "            target_column = columnObject[\"target_column\"]\n",
+        "            output_column = columnObject[\"output_column\"]\n",
+        "            values_dict = columnObject[\"values_dict\"]\n",
+        "            other_value = columnObject[\"other_value\"]\n",
+        "            df[output_column] =  processColumn(df[target_column], values_dict, other_value)\n",
+        "        except Exception as e:\n",
+        "            print(e)\n",
+        "            continue\n",
+        "    return df\n",
+        "\n",
+        "def exportToFile(df: DataFrame,fileType: str, exportName: str):\n",
+        "    \"\"\" \n",
+        "    df -> Pandas DataFrame object\n",
+        "    fileType -> Either \"csv\" or \"json\"\n",
+        "    exportName -> File location\n",
+        "    \"\"\"\n",
+        "    if(fileType == \"csv\"):\n",
+        "        name = f\"{exportName}.csv\"\n",
+        "        df.to_csv(name)\n",
+        "        print (f\"data export to {name}\")\n",
+        "    else:\n",
+        "        name = f\"{exportName}.json\"\n",
+        "        df.to_json(name, orient=\"records\")\n",
+        "        print (f\"data export to {name}\")\n",
+        "    "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 59,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -69,45 +131,6 @@
         "  14:\"Otro\",\n",
         "}\n",
         "\n",
-        "reversed_services_dict = dict( [( x[1],x[0])  for x in services_dict.items()])\n",
-        "\n",
-        "def codifyServices(x: str, services_dict: dict[str, int]):\n",
-        "    raw_values = x.split(\" \")\n",
-        "    output = []\n",
-        "    for value in raw_values:\n",
-        "        try:      \n",
-        "          codedValue = services_dict[value]\n",
-        "          output.append(str(codedValue) )\n",
-        "        except Exception as e:\n",
-        "            output.append(\"14\")\n",
-        "            \n",
-        "    return \"|\".join(output)\n",
-        "\n",
-        "services_carto[\"serv_tipo1\"] = services_carto[\"serv_tipo\"].apply(lambda x: codifyServices(x, reversed_services_dict))\n",
-        "#services_carto[\"serv_tipo1\"]"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 25,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "0    1|3|6\n",
-              "1    1|2|7\n",
-              "2    1|4|7\n",
-              "3      1|2\n",
-              "Name: cuenta_c_1, dtype: object"
-            ]
-          },
-          "execution_count": 25,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
         "# re structure variable cuenta_con\n",
         "cuenta_con_dict = {\n",
         "  1 :\"accesoaserviciodeinternet\",\n",
@@ -120,45 +143,6 @@
         "  8 :\"ningunadelasanteriores\",\n",
         "}\n",
         "\n",
-        "reversed_cuentacon_dict = dict( [( x[1],x[0])  for x in cuenta_con_dict.items()])\n",
-        "\n",
-        "def codifyServices(x: str, cuenta_con_dict: dict[str, int]):\n",
-        "    raw_values = x.split(\" \")\n",
-        "    output = []\n",
-        "    for value in raw_values:\n",
-        "        try:      \n",
-        "          codedValue = cuenta_con_dict [value]\n",
-        "          output.append(str(codedValue) )\n",
-        "        except Exception as e:\n",
-        "            output.append(\"8\")\n",
-        "            \n",
-        "    return \"|\".join(output)\n",
-        "\n",
-        "services_carto[\"cuenta_c_1\"] = services_carto[\"cuenta_con\"].apply(lambda x: codifyServices(x, reversed_cuentacon_dict))\n",
-        "#services_carto[\"cuenta_c_1\"]"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 62,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "0      9\n",
-              "1      1\n",
-              "2      8\n",
-              "3    1|6\n",
-              "Name: cual_ser_1, dtype: object"
-            ]
-          },
-          "execution_count": 62,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
         "# re structure variable children services (cual_serv1)\n",
         "cual_serv1_dict = {\n",
         "  1 :\"nnaalimentacionynutricion\",\n",
@@ -172,45 +156,6 @@
         "  9 : \" \",\n",
         "}\n",
         "\n",
-        "reversed_cual_serv1_dict = dict( [( x[1],x[0])  for x in cual_serv1_dict.items()])\n",
-        "\n",
-        "def codifyServices(x: str, cual_serv1_dict: dict[str, int]):\n",
-        "    raw_values = x.split(\" \")\n",
-        "    output = []\n",
-        "    for value in raw_values:\n",
-        "        try:      \n",
-        "          codedValue = cual_serv1_dict [value]\n",
-        "          output.append(str(codedValue) )\n",
-        "        except Exception as e:\n",
-        "            output.append(\"9\")\n",
-        "            \n",
-        "    return \"|\".join(output)\n",
-        "\n",
-        "services_carto[\"cual_ser_1\"] = services_carto[\"cual_serv1\"].astype(str).apply(lambda x: codifyServices(x, reversed_cual_serv1_dict))\n",
-        "services_carto[\"cual_ser_1\"]"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 61,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "0    3|6\n",
-              "1      1\n",
-              "2    1|2\n",
-              "3    4|5\n",
-              "Name: cual_ser_3, dtype: object"
-            ]
-          },
-          "execution_count": 61,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
         "# re structure variable women services (cual_ser_2)\n",
         "cual_ser_2_dict = {\n",
         "  1 :\"mujeresapoyonutricionalgestantesylactantes\",\n",
@@ -223,45 +168,6 @@
         "  8 : \" \",\n",
         "}\n",
         "\n",
-        "reversed_cual_ser_2_dict = dict( [( x[1],x[0])  for x in cual_ser_2_dict.items()])\n",
-        "\n",
-        "def codifyServices(x: str, cual_ser_2_dict: dict[str, int]):\n",
-        "    raw_values = x.split(\" \")\n",
-        "    output = []\n",
-        "    for value in raw_values:\n",
-        "        try:      \n",
-        "          codedValue = cual_ser_2_dict [value]\n",
-        "          output.append(str(codedValue) )\n",
-        "        except Exception as e:\n",
-        "            output.append(\"8\")\n",
-        "            \n",
-        "    return \"|\".join(output)\n",
-        "\n",
-        "services_carto[\"cual_ser_3\"] = services_carto[\"cual_ser_2\"].astype(str).apply(lambda x: codifyServices(x, reversed_cual_ser_2_dict))\n",
-        "services_carto[\"cual_ser_3\"]\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 58,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "0        5\n",
-              "1        2\n",
-              "2    1|2|3\n",
-              "3        2\n",
-              "Name: almacenamientoregistros_, dtype: object"
-            ]
-          },
-          "execution_count": 58,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
         "# re structure variable data storage (almacenamientoregistros)\n",
         "registro_dict = {\n",
         "  1 :\"archivofisico\",\n",
@@ -271,23 +177,78 @@
         "  5 : \" \",\n",
         "}\n",
         "\n",
-        "reversed_registro_dict  = dict( [( x[1],x[0])  for x in registro_dict.items()])\n",
+        "values = [\n",
+        "    {\n",
+        "        \"target_column\": \"serv_tipo\",\n",
+        "        \"output_column\": \"serv_tipo1\",\n",
+        "        \"values_dict\": services_dict,\n",
+        "        \"other_value\": \"0\"\n",
+        "    },\n",
+        "    {\n",
+        "        \"target_column\": \"cuenta_con\",\n",
+        "        \"output_column\": \"cuenta_c_1\",\n",
+        "        \"values_dict\": cuenta_con_dict,\n",
+        "        \"other_value\": \"0\"\n",
+        "    },\n",
+        "    {\n",
+        "        \"target_column\": \"cual_serv1\",\n",
+        "        \"output_column\": \"cual_ser_1\",\n",
+        "        \"values_dict\": cual_serv1_dict,\n",
+        "        \"other_value\": \"0\"\n",
+        "    },\n",
+        "    {\n",
+        "        \"target_column\": \"cual_ser_2\",\n",
+        "        \"output_column\": \"cual_ser_3\",\n",
+        "        \"values_dict\": cual_ser_2_dict,\n",
+        "        \"other_value\": \"0\"\n",
+        "    },\n",
+        "    {\n",
+        "        \"target_column\": \"almacenamientoregistros\",\n",
+        "        \"output_column\": \"almacenamientoregistros_\",\n",
+        "        \"values_dict\": cual_ser_2_dict,\n",
+        "        \"other_value\": \"0\"\n",
+        "    },\n",
+        "]\n",
         "\n",
-        "def codifyServices(x: str, registro_dict: dict[str, int]):\n",
-        "    raw_values = x.split(\" \")\n",
-        "    output = []\n",
-        "    for value in raw_values:\n",
-        "        try:      \n",
-        "          codedValue = registro_dict [value]\n",
-        "          output.append(str(codedValue) )\n",
-        "        except Exception as e:\n",
-        "            output.append(\"5\")\n",
-        "            \n",
-        "    return \"|\".join(output)\n",
-        "\n",
-        "services_carto[\"almacenamientoregistros_\"] = services_carto[\"almacenamientoregistros\"].astype(str).apply(lambda x: codifyServices(x, reversed_registro_dict))\n",
-        "services_carto[\"almacenamientoregistros_\"]\n"
+        "\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 65,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "processing serv_tipo\n",
+            "processing cuenta_con\n",
+            "processing cual_serv1\n",
+            "processing cual_ser_2\n",
+            "processing almacenamientoregistros\n",
+            "data export to output.csv.csv\n"
+          ]
+        }
+      ],
+      "source": [
+        "output_df = processMultValueColumns(services_carto, values)\n",
+        "exportToFile(output_df, \"csv\", \"output\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
@@ -306,7 +267,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.4"
+      "version": "3.9.7"
     },
     "orig_nbformat": 4
   },
