New changes multiple choice

--- a/services.ipynb
+++ b/services.ipynb
@@ -2,15 +2,15 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "c:\\Users\\User\\anaconda3\\lib\\site-packages\\pandas\\util\\_decorators.py:311: ParserWarning: Length of header or names does not match length of data. This leads to a loss of data with index_col=False.\n",
-            "  return func(*args, **kwargs)\n"
+            "C:\\Users\\maola\\AppData\\Local\\Temp\\ipykernel_16780\\3604605244.py:6: ParserWarning: Length of header or names does not match length of data. This leads to a loss of data with index_col=False.\n",
+            "  services = pd.read_csv('Aurora_Office_Fase_2_-_all_versions_-_False_-_2023-09-20-21-01-20.csv', sep=';', index_col = False)\n"
           ]
         }
       ],
@@ -41,13 +41,16 @@
         "              'siserviciosmujeres' : 'serv_dif_m',\n",
         "              'serviciosmujeres' : 'cual_ser_2',\n",
         "              'otroserviciomujeres' : 'otro_dif_m',\n",
+        "              'retos' : 'princ_reto',\n",
+        "              'idiomas' : 'idioma_ent',\n",
+        "               'medios' :  'medios_bri',\n",
         "              }\n",
         "services_carto = services.rename(columns=newColumns)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -108,11 +111,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# serv_tipo id the variable to test (separating by pipe symbol and categorized with number)\n",
+        "# serv_tipo (separating by pipe symbol and categorized with number)\n",
         "\n",
         "services_dict = {\n",
         "  1 :\"asesorialegal\",\n",
@@ -177,6 +180,48 @@
         "  5 : \" \",\n",
         "}\n",
         "\n",
+        "# variable funding \n",
+        "financ_dict = {\n",
+        "  1 :\"organismosorganizacionesinternacionales\",\n",
+        "  2 :\"gobiernonacional\",   \n",
+        "  3 :\"empresasnacionales\",\n",
+        "  4 :\"empresasinternacionales\",\n",
+        "  5 :\"organismosnogubernamentaleslocalesonacionales\",\n",
+        "  6 :\"sociedadcivil\",\n",
+        "  7 :\"otrosfinanciamientos\",\n",
+        "\n",
+        "}\n",
+        "\n",
+        "#  variable challenges\n",
+        "reto_dict = {\n",
+        "1 :\"conseguirlafinanciacionnecesaria\",\n",
+        "2 :\"mejorarlacalidaddelosserviciosofrecidos\",\n",
+        "3 :\"ampliarymejorarlacolaboracionconotrasentidades\",\n",
+        "4 :\"mejorarlavisibilidaddeltrabajorealizado\",\n",
+        "5 :\"medirycomunicarelimpactosocialdelosserviciosprestados\",\n",
+        "6 :\"comunicacionconlosusuarios\",\n",
+        "7 :\"otroreto\",\n",
+        "}\n",
+        "\n",
+        "# variable lenguages\n",
+        "idio_dict = {\n",
+        "1 :\"espanol\",\n",
+        "2 :\"ingles\",\n",
+        "3 :\"creole\",\n",
+        "4 :\"portugues\",\n",
+        "5 :\"otroidioma\",\n",
+        "}\n",
+        "\n",
+        "# variable medios\n",
+        "medio_dict = {\n",
+        "1 :\"caraacara\",\n",
+        "2 :\"folletos\",\n",
+        "3 :\"infografiaeninstalacionesdelpunto\",\n",
+        "4 :\"mediosaudiovisuales\",\n",
+        "5 :\"redessocialeseinternet\",\n",
+        "6 :\"otromedio\"\n",
+        "}\n",
+        "\n",
         "values = [\n",
         "    {\n",
         "        \"target_column\": \"serv_tipo\",\n",
@@ -208,6 +253,31 @@
         "        \"values_dict\": cual_ser_2_dict,\n",
         "        \"other_value\": \"0\"\n",
         "    },\n",
+        "     {\n",
+        "        \"target_column\": \"financiamiento\",\n",
+        "        \"output_column\": \"financb\",\n",
+        "        \"values_dict\": financ_dict,\n",
+        "        \"other_value\": \"0\"\n",
+        "    },\n",
+        "         {\n",
+        "        \"target_column\": \"princ_reto\",\n",
+        "        \"output_column\": \"princ_re_1\",\n",
+        "        \"values_dict\": reto_dict ,\n",
+        "        \"other_value\": \"0\"\n",
+        "    },\n",
+        "             {\n",
+        "        \"target_column\": \"idioma_ent\",\n",
+        "        \"output_column\": \"idioma_e_1\",\n",
+        "        \"values_dict\": idio_dict ,\n",
+        "        \"other_value\": \"0\"\n",
+        "    },\n",
+        "\n",
+        "                 {\n",
+        "        \"target_column\": \"medios_bri\",\n",
+        "        \"output_column\": \"medios_b_1\",\n",
+        "        \"values_dict\": medio_dict ,\n",
+        "        \"other_value\": \"0\"\n",
+        "    },\n",
         "]\n",
         "\n",
         "\n"
@@ -215,19 +285,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "processing serv_tipo\n",
-            "processing cuenta_con\n",
-            "processing cual_serv1\n",
-            "processing cual_ser_2\n",
-            "processing almacenamientoregistros\n",
-            "data export to output.csv.csv\n"
+            "data export to output.csv\n"
           ]
         }
       ],
@@ -267,7 +332,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.7"
+      "version": "3.11.4"
     },
     "orig_nbformat": 4
   },
